Tái cau truc giao diẹn theo SOLID (chua xong)